--- a/lab1-datainsamling/datainsamling.ipynb
+++ b/lab1-datainsamling/datainsamling.ipynb
@@ -91,11 +91,508 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "d6db5137",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>city</th>\n",
+       "      <th>temp</th>\n",
+       "      <th>date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Stockholm</td>\n",
+       "      <td>10</td>\n",
+       "      <td>2024-06-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Göteborg</td>\n",
+       "      <td>17</td>\n",
+       "      <td>2024-06-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Malmö</td>\n",
+       "      <td>20</td>\n",
+       "      <td>2024-06-01</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        city  temp        date\n",
+       "0  Stockholm    10  2024-06-01\n",
+       "1   Göteborg    17  2024-06-01\n",
+       "2      Malmö    20  2024-06-01"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = { \"city\":[\"Stockholm\",\"Göteborg\",\"Malmö\"],\"temp\":[10,17,20], \"date\":[\"2024-06-01\",\"2024-06-01\",\"2024-06-01\"] }\n",
+    "df2 = pd.DataFrame(data)\n",
+    "df2.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "120144db",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>kund_id</th>\n",
+       "      <th>pris</th>\n",
+       "      <th>antal</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>10.00000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>104.600000</td>\n",
+       "      <td>2697.300000</td>\n",
+       "      <td>1.70000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>2.875181</td>\n",
+       "      <td>4113.751655</td>\n",
+       "      <td>1.05935</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>101.000000</td>\n",
+       "      <td>129.000000</td>\n",
+       "      <td>1.00000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>102.250000</td>\n",
+       "      <td>386.500000</td>\n",
+       "      <td>1.00000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>104.500000</td>\n",
+       "      <td>799.000000</td>\n",
+       "      <td>1.00000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>106.750000</td>\n",
+       "      <td>2024.750000</td>\n",
+       "      <td>2.00000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>109.000000</td>\n",
+       "      <td>12000.000000</td>\n",
+       "      <td>4.00000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          kund_id          pris     antal\n",
+       "count   10.000000     10.000000  10.00000\n",
+       "mean   104.600000   2697.300000   1.70000\n",
+       "std      2.875181   4113.751655   1.05935\n",
+       "min    101.000000    129.000000   1.00000\n",
+       "25%    102.250000    386.500000   1.00000\n",
+       "50%    104.500000    799.000000   1.00000\n",
+       "75%    106.750000   2024.750000   2.00000\n",
+       "max    109.000000  12000.000000   4.00000"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = {\n",
+    "    \"kund_id\": [101, 102, 103, 101, 104, 105, 106, 107, 108, 109],\n",
+    "    \"datum\": [\n",
+    "        \"2024-12-28\", \"2025-01-02\", \"2025-01-03\", \"2025-01-05\",\n",
+    "        \"2025-01-06\", \"2025-01-08\", \"2025-01-08\", \"2025-01-09\",\n",
+    "        \"2025-01-10\", \"2025-01-10\"\n",
+    "    ],\n",
+    "    \"produkt\": [\n",
+    "        \"Laptop\", \"Mobilskal\", \"Hörlurar\", \"Mus\", \"Tangentbord\",\n",
+    "        \"Skärm\", \"Mobiltelefon\", \"Webbkamera\", \"Skrivare\", \"USB-minne\"\n",
+    "    ],\n",
+    "    \"kategori\": [\n",
+    "        \"Elektronik\", \"Tillbehör\", \"Ljud\", \"Tillbehör\", \"Tillbehör\",\n",
+    "        \"Elektronik\", \"Elektronik\", \"Tillbehör\", \"Elektronik\", \"Tillbehör\"\n",
+    "    ],\n",
+    "    \"pris\": [12000, 199, 899, 349, 499, 2200, 8500, 699, 1499, 129],\n",
+    "    \"antal\": [1, 2, 1, 1, 1, 2, 1, 3, 1, 4],\n",
+    "    \"stad\": [\n",
+    "        \"Stockholm\", \"Göteborg\", \"Malmö\", \"Stockholm\", \"Uppsala\",\n",
+    "        \"Stockholm\", \"Lund\", \"Göteborg\", \"Umeå\", \"Västerås\"\n",
+    "    ]\n",
+    "}\n",
+    "\n",
+    "df = pd.DataFrame(data)\n",
+    "df.head()\n",
+    "df.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "a1189bcc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>kund_id</th>\n",
+       "      <th>datum</th>\n",
+       "      <th>produkt</th>\n",
+       "      <th>kategori</th>\n",
+       "      <th>pris</th>\n",
+       "      <th>antal</th>\n",
+       "      <th>stad</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>101</td>\n",
+       "      <td>2024-12-28</td>\n",
+       "      <td>Laptop</td>\n",
+       "      <td>Elektronik</td>\n",
+       "      <td>12000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Stockholm</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>101</td>\n",
+       "      <td>2025-01-05</td>\n",
+       "      <td>Mus</td>\n",
+       "      <td>Tillbehör</td>\n",
+       "      <td>349</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Stockholm</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>105</td>\n",
+       "      <td>2025-01-08</td>\n",
+       "      <td>Skärm</td>\n",
+       "      <td>Elektronik</td>\n",
+       "      <td>2200</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Stockholm</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   kund_id       datum produkt    kategori   pris  antal       stad\n",
+       "0      101  2024-12-28  Laptop  Elektronik  12000      1  Stockholm\n",
+       "3      101  2025-01-05     Mus   Tillbehör    349      1  Stockholm\n",
+       "5      105  2025-01-08   Skärm  Elektronik   2200      2  Stockholm"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = df[(df[\"stad\"] == \"Stockholm\") & (df[\"datum\"] >= \"2024-01-01\")]\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "6f3d2f61",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>kund_id</th>\n",
+       "      <th>pris</th>\n",
+       "      <th>antal</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>102.333333</td>\n",
+       "      <td>4849.666667</td>\n",
+       "      <td>1.333333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>2.309401</td>\n",
+       "      <td>6261.150081</td>\n",
+       "      <td>0.577350</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>101.000000</td>\n",
+       "      <td>349.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>101.000000</td>\n",
+       "      <td>1274.500000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>101.000000</td>\n",
+       "      <td>2200.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>103.000000</td>\n",
+       "      <td>7100.000000</td>\n",
+       "      <td>1.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>105.000000</td>\n",
+       "      <td>12000.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          kund_id          pris     antal\n",
+       "count    3.000000      3.000000  3.000000\n",
+       "mean   102.333333   4849.666667  1.333333\n",
+       "std      2.309401   6261.150081  0.577350\n",
+       "min    101.000000    349.000000  1.000000\n",
+       "25%    101.000000   1274.500000  1.000000\n",
+       "50%    101.000000   2200.000000  1.000000\n",
+       "75%    103.000000   7100.000000  1.500000\n",
+       "max    105.000000  12000.000000  2.000000"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "73658ea7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>kund_id</th>\n",
+       "      <th>pris</th>\n",
+       "      <th>antal</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>10.00</td>\n",
+       "      <td>10.00</td>\n",
+       "      <td>10.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>104.60</td>\n",
+       "      <td>2697.30</td>\n",
+       "      <td>1.70</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>2.88</td>\n",
+       "      <td>4113.75</td>\n",
+       "      <td>1.06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>101.00</td>\n",
+       "      <td>129.00</td>\n",
+       "      <td>1.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>102.25</td>\n",
+       "      <td>386.50</td>\n",
+       "      <td>1.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>104.50</td>\n",
+       "      <td>799.00</td>\n",
+       "      <td>1.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>106.75</td>\n",
+       "      <td>2024.75</td>\n",
+       "      <td>2.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>109.00</td>\n",
+       "      <td>12000.00</td>\n",
+       "      <td>4.00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       kund_id      pris  antal\n",
+       "count    10.00     10.00  10.00\n",
+       "mean    104.60   2697.30   1.70\n",
+       "std       2.88   4113.75   1.06\n",
+       "min     101.00    129.00   1.00\n",
+       "25%     102.25    386.50   1.00\n",
+       "50%     104.50    799.00   1.00\n",
+       "75%     106.75   2024.75   2.00\n",
+       "max     109.00  12000.00   4.00"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Visa färre decimaler\n",
+    "df.describe().round(2)"
+   ]
   }
  ],
  "metadata": {
