--- a/lab1-datainsamling/Lab1-Datainsamling.ipynb
+++ b/lab1-datainsamling/Lab1-Datainsamling.ipynb
@@ -95,19 +95,19 @@
     "import panda as pd\n",
     "\n",
     "# Läser in datafilen med hjälp av pd\n",
-    "fittness = pd.read_csv(\"övningsdata.csv\")\n",
+    "fitness = pd.read_csv(\"iot_fitness.csv\")\n",
     "\n",
     "# Laddar csv filen i en Dataframe\n",
     "\n",
-    "df_home_fittness = pd.DataFrame(fittness)\n",
+    "df_fitness = pd.DataFrame(fitness)\n",
     "\n",
     "# Nu kan vi hantera, analysera och manipulera våra dataframe\n",
     "\n",
-    "df_home_fittness.head() # ger oss de första fem raderna av data\n",
-    "df_home_fittness.tail() # ger oss sista raderna\n",
-    "df_home_fittness.shape  # formen på dataframe\n",
-    "df_home_fittness.size   # storleken på dataframe\n",
-    "df_home_fittness.columns # ger columner\n"
+    "df_fitness.head() # ger oss de första fem raderna av data\n",
+    "df_fitness.tail() # ger oss sista raderna\n",
+    "df_fitness.shape  # formen på dataframe\n",
+    "df_fitness.size   # storleken på dataframe\n",
+    "df_fitness.columns # ger columner\n"
    ]
   },
   {
@@ -120,13 +120,13 @@
    "outputs": [],
    "source": [
     "# Visar vilka datatyper vår dataframe innehåller\n",
-    "df_home_fittness.info()\n",
+    "df_fitness.info()\n",
     "\n",
     "# Visar statistik\n",
-    "df_home_fittness.describe()\n",
+    "df_fitness.describe()\n",
     "\n",
     "# Sample ger oss random data\n",
-    "df_home_fittness.sample(10)\n"
+    "df_fitness.sample(10)\n"
    ]
   },
   {
@@ -139,10 +139,10 @@
    "outputs": [],
    "source": [
     "# loc ger oss filter data,\n",
-    "df_home_fittness.loc[1,2]  # visar andra och tredje raden i dataframe\n",
-    "df_home_fittness.loc[1:5]  # visar rad 1 till 5\n",
-    "df_home_fittness.loc[1:]   # visar rad 1 och alla rader efter 1\n",
-    "df_home_fittness.loc[4:20,[\"Calories_Burned\"]] # visar Calories_Burned för rad 4 till 20\n"
+    "df_fitness.loc[1,2]  # visar andra och tredje raden i dataframe\n",
+    "df_fitness.loc[1:5]  # visar rad 1 till 5\n",
+    "df_fitness.loc[1:]   # visar rad 1 och alla rader efter 1\n",
+    "df_fitness.loc[4:20,[\"Calories_Burned\"]] # visar Calories_Burned för rad 4 till 20\n"
    ]
   },
   {
@@ -154,20 +154,20 @@
    },
    "outputs": [],
    "source": [
-    "df_home_fittness.head()\n",
+    "df_fitness.head()\n",
     "\n",
     "# om vi vill ändra value för en specifik kolumn\n",
-    "df_home_fittness.loc[10,\"Calories_Burned\"] = 400\n",
+    "df_fitness.loc[10,\"Calories_Burned\"] = 400\n",
     "\n",
     "# vi kan komma åt datan i en kolumn\n",
-    "df_home_fittness[\"Calories_Burned\"]\n",
+    "df_fitness[\"Calories_Burned\"]\n",
     "\n",
     "# visa och sortera värden i en kolumn\n",
-    "df_home_fittness.sort_value(\"Calories_Burned\") # visar värden i ökande order\n",
-    "df_home_fittness.sort_value(\"Calories_Burned\", ascending =False) # visar värden i fallande order\n",
+    "df_fitness.sort_value(\"Calories_Burned\") # visar värden i ökande order\n",
+    "df_fitness.sort_value(\"Calories_Burned\", ascending =False) # visar värden i fallande order\n",
     "\n",
     "# visa värden för en kolumn som följer viss regel\n",
-    "selected_rows = df_home_fittness.loc[df_home_fittness[\"Calories_Burned\"] < 500]"
+    "selected_rows = df_fitness.loc[df_fitness[\"Calories_Burned\"] < 500]"
    ]
   },
   {
