--- a/lab1-datainsamling/Lab1-Datainsamling.ipynb
+++ b/lab1-datainsamling/Lab1-Datainsamling.ipynb
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "id": "qVb__2ORrGa5",
    "metadata": {
     "id": "qVb__2ORrGa5"
@@ -488,7 +488,8 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
@@ -501,7 +502,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.1"
+   "version": "3.12.12"
   }
  },
  "nbformat": 4,
