--- a/mini-projekt/Mini_Projekt_Mall.ipynb
+++ b/mini-projekt/Mini_Projekt_Mall.ipynb
@@ -12,20 +12,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "id": "87d5594f",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'pandas'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# TODO: Importera pandas\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpandas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpd\u001b[39;00m\n\u001b[32m      4\u001b[39m \u001b[38;5;66;03m# TODO: Ladda in data från CSV-fil\u001b[39;00m\n\u001b[32m      5\u001b[39m \n\u001b[32m      6\u001b[39m \n\u001b[32m   (...)\u001b[39m\u001b[32m     12\u001b[39m \n\u001b[32m     13\u001b[39m \u001b[38;5;66;03m# TODO: Lista alla kolumner\u001b[39;00m\n",
-      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'pandas'"
-     ]
+     "data": {
+      "text/plain": [
+       "['date_time',\n",
+       " 'is_holiday',\n",
+       " 'air_pollution_index',\n",
+       " 'humidity',\n",
+       " 'wind_speed',\n",
+       " 'wind_direction',\n",
+       " 'visibility_in_miles',\n",
+       " 'dew_point',\n",
+       " 'temperature',\n",
+       " 'rain_p_h',\n",
+       " 'snow_p_h',\n",
+       " 'clouds_all',\n",
+       " 'weather_type',\n",
+       " 'weather_description']"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -33,15 +45,16 @@
     "import pandas as pd\n",
     "\n",
     "# TODO: Ladda in data från CSV-fil\n",
-    "\n",
+    "df=pd.read_csv('Test.csv')\n",
     "\n",
     "# TODO: Visa första 5 raderna\n",
-    "\n",
+    "df.head()\n",
     "\n",
     "# TODO: Visa antal rader och kolumner\n",
+    "df.shape\n",
     "\n",
-    "\n",
-    "# TODO: Lista alla kolumner\n"
+    "# TODO: Lista alla kolumner\n",
+    "list(df.columns)"
    ]
   },
   {
@@ -66,19 +79,199 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "8841e89a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>air_pollution_index</th>\n",
+       "      <th>humidity</th>\n",
+       "      <th>wind_speed</th>\n",
+       "      <th>wind_direction</th>\n",
+       "      <th>visibility_in_miles</th>\n",
+       "      <th>dew_point</th>\n",
+       "      <th>temperature</th>\n",
+       "      <th>rain_p_h</th>\n",
+       "      <th>snow_p_h</th>\n",
+       "      <th>clouds_all</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>14454.000000</td>\n",
+       "      <td>14454.000000</td>\n",
+       "      <td>14454.000000</td>\n",
+       "      <td>14454.000000</td>\n",
+       "      <td>14454.000000</td>\n",
+       "      <td>14454.000000</td>\n",
+       "      <td>14454.000000</td>\n",
+       "      <td>14454.000000</td>\n",
+       "      <td>14454.0</td>\n",
+       "      <td>14454.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>154.679397</td>\n",
+       "      <td>67.833887</td>\n",
+       "      <td>3.607306</td>\n",
+       "      <td>209.285319</td>\n",
+       "      <td>5.005535</td>\n",
+       "      <td>5.005535</td>\n",
+       "      <td>283.859084</td>\n",
+       "      <td>0.066965</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>46.801785</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>83.405392</td>\n",
+       "      <td>21.147425</td>\n",
+       "      <td>2.212177</td>\n",
+       "      <td>94.996443</td>\n",
+       "      <td>2.586276</td>\n",
+       "      <td>2.586276</td>\n",
+       "      <td>12.769255</td>\n",
+       "      <td>0.466853</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>39.232165</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>246.150000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>83.000000</td>\n",
+       "      <td>54.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>140.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>273.720000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>155.000000</td>\n",
+       "      <td>71.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>211.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>287.725000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>40.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>227.000000</td>\n",
+       "      <td>85.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>290.000000</td>\n",
+       "      <td>7.000000</td>\n",
+       "      <td>7.000000</td>\n",
+       "      <td>293.860000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>90.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>299.000000</td>\n",
+       "      <td>100.000000</td>\n",
+       "      <td>16.000000</td>\n",
+       "      <td>360.000000</td>\n",
+       "      <td>9.000000</td>\n",
+       "      <td>9.000000</td>\n",
+       "      <td>310.070000</td>\n",
+       "      <td>10.600000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>92.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       air_pollution_index      humidity    wind_speed  wind_direction  \\\n",
+       "count         14454.000000  14454.000000  14454.000000    14454.000000   \n",
+       "mean            154.679397     67.833887      3.607306      209.285319   \n",
+       "std              83.405392     21.147425      2.212177       94.996443   \n",
+       "min              10.000000     10.000000      0.000000        0.000000   \n",
+       "25%              83.000000     54.000000      2.000000      140.000000   \n",
+       "50%             155.000000     71.000000      3.000000      211.000000   \n",
+       "75%             227.000000     85.000000      5.000000      290.000000   \n",
+       "max             299.000000    100.000000     16.000000      360.000000   \n",
+       "\n",
+       "       visibility_in_miles     dew_point   temperature      rain_p_h  \\\n",
+       "count         14454.000000  14454.000000  14454.000000  14454.000000   \n",
+       "mean              5.005535      5.005535    283.859084      0.066965   \n",
+       "std               2.586276      2.586276     12.769255      0.466853   \n",
+       "min               1.000000      1.000000    246.150000      0.000000   \n",
+       "25%               3.000000      3.000000    273.720000      0.000000   \n",
+       "50%               5.000000      5.000000    287.725000      0.000000   \n",
+       "75%               7.000000      7.000000    293.860000      0.000000   \n",
+       "max               9.000000      9.000000    310.070000     10.600000   \n",
+       "\n",
+       "       snow_p_h    clouds_all  \n",
+       "count   14454.0  14454.000000  \n",
+       "mean        0.0     46.801785  \n",
+       "std         0.0     39.232165  \n",
+       "min         0.0      0.000000  \n",
+       "25%         0.0      1.000000  \n",
+       "50%         0.0     40.000000  \n",
+       "75%         0.0     90.000000  \n",
+       "max         0.0     92.000000  "
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# TODO: Kolla efter saknade värden\n",
+    "df.isnull().sum()\n",
     "\n",
     "\n",
     "# TODO: Kolla efter duplikater\n",
-    "\n",
+    "df.duplicated().sum()\n",
     "\n",
     "# TODO: Visa statistik för numeriska kolumner\n",
-    "\n",
+    "df.describe()\n",
     "\n",
     "# TODO: Kolla efter outliers (extremvärden)\n"
    ]
