--- a/mini-projekt/Mini_Projekt_Mall.ipynb
+++ b/mini-projekt/Mini_Projekt_Mall.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "87d5594f",
    "metadata": {},
    "outputs": [
@@ -35,7 +35,7 @@
        " 'weather_description']"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -45,7 +45,7 @@
     "import pandas as pd\n",
     "\n",
     "# TODO: Ladda in data från CSV-fil\n",
-    "df = pd.read_csv('Test.csv')\n",
+    "df = pd.read_csv(\"../data/Test.csv\")\n",
     "\n",
     "\n",
     "# TODO: Visa första 5 raderna\n",
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "8841e89a",
    "metadata": {},
    "outputs": [
@@ -274,7 +274,8 @@
     "# TODO: Visa statistik för numeriska kolumner\n",
     "df.describe()\n",
     "\n",
-    "# TODO: Kolla efter outliers (extremvärden)\n"
+    "# TODO: Kolla efter outliers (extremvärden)\n",
+    "import matplotlib.pyplot as plt\n"
    ]
   },
   {
