--- a/mini-projekt/Mini_Projekt_Mall.ipynb
+++ b/mini-projekt/Mini_Projekt_Mall.ipynb
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "9663f143",
    "metadata": {},
    "outputs": [
@@ -442,7 +442,7 @@
     "# TODO: Skapa en graf\n",
     "plt.xlabel(\"Temperature\")\n",
     "plt.ylabel(\"Air Pollution Index\")\n",
-    "plt.title(\"Temperature vs Air Pollution Index\")\n",
+    "plt.title(\"Temperature vs Air Pollution Index\")'\n",
     "plt.show()\n"
    ]
   },
