--- a/mini-projekt/Mini_Projekt_Mall.ipynb
+++ b/mini-projekt/Mini_Projekt_Mall.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "87d5594f",
    "metadata": {},
    "outputs": [
@@ -50,6 +50,7 @@
     "\n",
     "# TODO: Visa första 5 raderna\n",
     "df.head()\n",
+    "df.tail()\n",
     "\n",
     "# TODO: Visa antal rader och kolumner\n",
     "df.shape\n",
