--- a/lab4-prediktiv-modell/Lab4-Prediktiv-Modell.ipynb
+++ b/lab4-prediktiv-modell/Lab4-Prediktiv-Modell.ipynb
@@ -26,10 +26,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "535cc91a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting scikit-learn\n",
+      "  Using cached scikit_learn-1.7.2-cp311-cp311-macosx_12_0_arm64.whl.metadata (11 kB)\n",
+      "Requirement already satisfied: numpy>=1.22.0 in /opt/homebrew/lib/python3.11/site-packages (from scikit-learn) (2.3.5)\n",
+      "Collecting scipy>=1.8.0 (from scikit-learn)\n",
+      "  Using cached scipy-1.16.3-cp311-cp311-macosx_14_0_arm64.whl.metadata (62 kB)\n",
+      "Collecting joblib>=1.2.0 (from scikit-learn)\n",
+      "  Using cached joblib-1.5.2-py3-none-any.whl.metadata (5.6 kB)\n",
+      "Collecting threadpoolctl>=3.1.0 (from scikit-learn)\n",
+      "  Using cached threadpoolctl-3.6.0-py3-none-any.whl.metadata (13 kB)\n",
+      "Using cached scikit_learn-1.7.2-cp311-cp311-macosx_12_0_arm64.whl (8.6 MB)\n",
+      "Using cached joblib-1.5.2-py3-none-any.whl (308 kB)\n",
+      "Using cached scipy-1.16.3-cp311-cp311-macosx_14_0_arm64.whl (20.9 MB)\n",
+      "Using cached threadpoolctl-3.6.0-py3-none-any.whl (18 kB)\n",
+      "Installing collected packages: threadpoolctl, scipy, joblib, scikit-learn\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m4/4\u001b[0m [scikit-learn][0m [scikit-learn]\n",
+      "\u001b[1A\u001b[2KSuccessfully installed joblib-1.5.2 scikit-learn-1.7.2 scipy-1.16.3 threadpoolctl-3.6.0\n",
+      "Note: you may need to restart the kernel to use updated packages.\n",
+      "✅ scikit-learn installerad!\n"
+     ]
+    }
+   ],
    "source": [
     "# STEG 0: Installera sklearn (scikit-learn)\n",
     "# Kör denna cell FÖRST!\n",
@@ -40,10 +65,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "0b578d2d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Bibliotek importerade!\n",
+      "Vi använder sklearn - världens enklaste ML-bibliotek\n"
+     ]
+    }
+   ],
    "source": [
     "# STEG 1: Importera bibliotek\n",
     "import pandas as pd\n",
@@ -61,13 +95,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "74e8c8b5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " DATA LADDAD\n",
+      "============================================================\n",
+      "Antal rader: 19,885\n",
+      "Antal kolumner: 29\n",
+      "\n",
+      "Första 3 rader:\n",
+      "             Datum_Tid  Vitvaror_Energi_Wh  Belysning_Wh  Temp_Kök_C  \\\n",
+      "0  2016-01-11 17:00:00                60.0            30       19.89   \n",
+      "1  2016-01-11 17:10:00                60.0            30       19.89   \n",
+      "2  2016-01-11 17:20:00                50.0            30       19.89   \n",
+      "\n",
+      "   Fukt_Kök_Procent  Temp_Vardagsrum_C  Fukt_Vardagsrum_Procent  \\\n",
+      "0         47.596667               19.2                44.790000   \n",
+      "1         46.693333               19.2                44.722500   \n",
+      "2         46.300000               19.2                44.626667   \n",
+      "\n",
+      "   Temp_Tvättstuga_C  Fukt_Tvättstuga_Procent  Temp_Kontor_C  ...  \\\n",
+      "0              19.79                44.730000      19.000000  ...   \n",
+      "1              19.79                44.790000      19.000000  ...   \n",
+      "2              19.79                44.933333      18.926667  ...   \n",
+      "\n",
+      "   Temp_Föräldrarum_C  Fukt_Föräldrarum_Procent  Temp_Utomhus_Väderstation_C  \\\n",
+      "0           17.033333                     45.53                     6.600000   \n",
+      "1           17.066667                     45.56                     6.483333   \n",
+      "2           17.000000                     45.50                     6.366667   \n",
+      "\n",
+      "   Lufttryck_mmHg  Fukt_Utomhus_Väderstation_Procent  Vindhastighet_m_per_s  \\\n",
+      "0           733.5                               92.0               7.000000   \n",
+      "1           733.6                               92.0               6.666667   \n",
+      "2           733.7                               92.0               6.333333   \n",
+      "\n",
+      "     Sikt_km  Daggpunkt_C  Slump_Variabel_1  Slump_Variabel_2  \n",
+      "0  63.000000          5.3         13.275433         13.275433  \n",
+      "1  59.166667          5.2         18.606195         18.606195  \n",
+      "2  55.333333          5.1         28.642668         28.642668  \n",
+      "\n",
+      "[3 rows x 29 columns]\n"
+     ]
+    }
+   ],
    "source": [
     "# STEG 2: Läs in ren data\n",
-    "data = pd.read_csv(\"../data/cleaned_iot_data.csv\")\n",
+    "data = pd.read_csv(\"../data/raw_energydata.csv\")\n",
     "\n",
     "print(\" DATA LADDAD\")\n",
     "print(\"=\" * 60)\n",
@@ -555,7 +633,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.1"
+   "version": "3.11.14"
   }
  },
  "nbformat": 4,
