--- a/lab4-prediktiv-modell/Lab4-Prediktiv-Modell.ipynb
+++ b/lab4-prediktiv-modell/Lab4-Prediktiv-Modell.ipynb
@@ -175,10 +175,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "f83a5d0d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " VÄLJ DATA FÖR MODELLEN\n",
+      "============================================================\n",
+      " Target (Y): Vitvaror_Energi_Wh\n",
+      "   → Detta ska modellen lära sig förutsäga\n",
+      "\n",
+      " Features (X): 4 kolumner\n",
+      "   1. Temp_Kök_C - Temperatur i köket\n",
+      "   2. Fukt_Kök_Procent - Fuktighet i köket\n",
+      "   3. Belysning_Wh - Belysning (indikerar aktivitet)\n",
+      "   4. Temp_Utomhus_Norr_C - Väder påverkar kylskåp\n",
+      "\n",
+      " Data shape:\n",
+      "   X: (19885, 4) (rader, kolumner)\n",
+      "   Y: (19885,) (rader)\n"
+     ]
+    }
+   ],
    "source": [
     "# STEG 3: Välj features (X) och target (Y)\n",
     "\n",
