--- a/mini-projekt/Mohamed.Filimon.ipynb
+++ b/mini-projekt/Mohamed.Filimon.ipynb
@@ -415,24 +415,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "7bf301c3",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1180f4fe",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "fce0395a",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
    "execution_count": 14,
    "id": "9663f143",
@@ -479,7 +461,7 @@
    "id": "0f7209ba",
    "metadata": {},
    "source": [
-    "I garffen ser vi inget samband mellan temperaturen och luftföroreningar, i olika temperatursnivå så förekommer detta både höga och löga luftföroreningar, som gör att temperaturen har inga starkt påverkan av luftföroreningsnivåerna."
+    "I garffen ser vi inget samband mellan temperaturen och luftföroreningar, i olika temperatursnivå så förekommer både höga och löga luftföroreningar, som gör att temperaturen har inga starkt påverkan av luftföroreningsnivåerna."
    ]
   },
   {
