--- a/mini-projekt/Mohamed.Filimon.ipynb
+++ b/mini-projekt/Mohamed.Filimon.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "87d5594f",
    "metadata": {},
    "outputs": [
@@ -35,7 +35,7 @@
        " 'weather_description']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "8841e89a",
    "metadata": {},
    "outputs": [
@@ -627,7 +627,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
