--- a/lab4-prediktiv-modell/Lab4-Prediktiv-Modell.ipynb
+++ b/lab4-prediktiv-modell/Lab4-Prediktiv-Modell.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "535cc91a",
    "metadata": {},
    "outputs": [
@@ -34,22 +34,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting scikit-learn\n",
-      "  Using cached scikit_learn-1.7.2-cp311-cp311-macosx_12_0_arm64.whl.metadata (11 kB)\n",
+      "Requirement already satisfied: scikit-learn in /opt/homebrew/lib/python3.11/site-packages (1.7.2)\n",
       "Requirement already satisfied: numpy>=1.22.0 in /opt/homebrew/lib/python3.11/site-packages (from scikit-learn) (2.3.5)\n",
-      "Collecting scipy>=1.8.0 (from scikit-learn)\n",
-      "  Using cached scipy-1.16.3-cp311-cp311-macosx_14_0_arm64.whl.metadata (62 kB)\n",
-      "Collecting joblib>=1.2.0 (from scikit-learn)\n",
-      "  Using cached joblib-1.5.2-py3-none-any.whl.metadata (5.6 kB)\n",
-      "Collecting threadpoolctl>=3.1.0 (from scikit-learn)\n",
-      "  Using cached threadpoolctl-3.6.0-py3-none-any.whl.metadata (13 kB)\n",
-      "Using cached scikit_learn-1.7.2-cp311-cp311-macosx_12_0_arm64.whl (8.6 MB)\n",
-      "Using cached joblib-1.5.2-py3-none-any.whl (308 kB)\n",
-      "Using cached scipy-1.16.3-cp311-cp311-macosx_14_0_arm64.whl (20.9 MB)\n",
-      "Using cached threadpoolctl-3.6.0-py3-none-any.whl (18 kB)\n",
-      "Installing collected packages: threadpoolctl, scipy, joblib, scikit-learn\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m4/4\u001b[0m [scikit-learn][0m [scikit-learn]\n",
-      "\u001b[1A\u001b[2KSuccessfully installed joblib-1.5.2 scikit-learn-1.7.2 scipy-1.16.3 threadpoolctl-3.6.0\n",
+      "Requirement already satisfied: scipy>=1.8.0 in /opt/homebrew/lib/python3.11/site-packages (from scikit-learn) (1.16.3)\n",
+      "Requirement already satisfied: joblib>=1.2.0 in /opt/homebrew/lib/python3.11/site-packages (from scikit-learn) (1.5.2)\n",
+      "Requirement already satisfied: threadpoolctl>=3.1.0 in /opt/homebrew/lib/python3.11/site-packages (from scikit-learn) (3.6.0)\n",
       "Note: you may need to restart the kernel to use updated packages.\n",
       "✅ scikit-learn installerad!\n"
      ]
@@ -95,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "74e8c8b5",
    "metadata": {},
    "outputs": [
@@ -105,7 +94,7 @@
      "text": [
       " DATA LADDAD\n",
       "============================================================\n",
-      "Antal rader: 19,885\n",
+      "Antal rader: 17,700\n",
       "Antal kolumner: 29\n",
       "\n",
       "Första 3 rader:\n",
@@ -145,7 +134,7 @@
    ],
    "source": [
     "# STEG 2: Läs in ren data\n",
-    "data = pd.read_csv(\"../data/raw_energydata.csv\")\n",
+    "data = pd.read_csv(\"../data/cleaned_raw_energydata.csv\")\n",
     "\n",
     "print(\" DATA LADDAD\")\n",
     "print(\"=\" * 60)\n",
